TAB + ENTER fix on add page
in case if lemma box is empty and user press ENTER then postback occurs

--- a/odict.ru/Site.Master
+++ b/odict.ru/Site.Master
@@ -24,7 +24,7 @@
     </asp:ContentPlaceHolder>
 </head>
 <body>
-    <form runat="server">
+    <form autocomplete="off" runat="server">
         <div class="page">
             <div class="main">
                 <asp:ContentPlaceHolder ID="MainContent" runat="server"/>
