--- a/odict.ru/Styles/Site.css
+++ b/odict.ru/Styles/Site.css
@@ -368,3 +368,19 @@ div.accountInfo
 {
     color:#ff3322;
 }
+.div250
+{
+    width:250px;
+}
+.div400
+{
+    width:400px;
+}
+.div100
+{
+    width:100px;
+}
+.width100pr 
+{
+    width:100%;
+}
