--- a/odict.ru/Styles/Mobile.css
+++ b/odict.ru/Styles/Mobile.css
@@ -1,5 +1,13 @@
 ﻿/* DEFAULTS
 ----------------------------------------------------------*/
+* 
+{
+    margin:0px;
+}
+html
+{
+    height:100%;
+}
 body   
 {
     background: white;
@@ -8,7 +16,7 @@ body
     padding: 0px;
     /*color: #776969;*/
     font-size :25px;
-    height:100%;
+    /*height:100%;*/
 }
 
 a:link, a:visited
@@ -29,19 +37,25 @@ a:active
 
 input, select
 {
-    /*padding: 10px;*/
-    /*border:2px solid silver;*/
+    padding: 5px;
+    border-radius: 5px;
+    border:2px solid #aaa;
     box-sizing:border-box;
     font-size:20px;
 }
-input:focus
+input[type=text], select
 {
-    border-color:blue;
+    background-color:#f5f5f5;
+}
+/* Smooth outline with box-shadow: */
+input[type=text]:focus 
+{
+    box-shadow: 0px 0px 3pt 2pt silver;
+    background-color:#fff;
 }
 
 /* PRIMARY LAYOUT ELEMENTS   
 ----------------------------------------------------------*/
-
 .page
 {
     margin:0px 10px 0px 10px;
@@ -52,7 +66,7 @@ input:focus
     color: #4e5766;
     text-align: center;
     line-height: normal;
-    margin:20px auto 10px auto;
+    margin:20px auto;
 }
 
 
@@ -86,13 +100,17 @@ input:focus
 .lmargin10px
 {
 }
-.divTopMessage
-{
-    text-align:center;
-    margin: 0px auto 0px auto;
-}
 .submitAdd
 {
+    color:#000;
+    background:silver;
+    margin: 10px auto 10px auto;
+}
+.submitAdd:disabled
+{
+    color:silver;
+    background:#f5f5f5;
+    border-color:#e0e0e0;
     margin: 10px auto 10px auto;
 }
 .linediv
@@ -104,13 +122,26 @@ input:focus
 {
     margin-top:20px;
 }
+.divMessage
+{
+    text-align:center;
+    margin: 0px auto 0px auto;
+    border-radius: 3px;
+    border: 2px solid;
+}
 .messageSuccess
 {
-    color:#029a0a;
+    background: #efffef;
+    border-color: #afa;
+    color: #3d3;
+    box-shadow: 0px 0px 3pt 2pt #bfb;
 }
 .messageError
 {
-    color:#ff3322;
+    background: #ffefef;
+    border-color:#faa;
+    color: #d33;
+    box-shadow: 0px 0px 3pt 2pt #fbb;
 }
 .div250
 {
